# Benchmarking-Suite-for-High-Frequency-CPP-Trading-Systems

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark-functions.sh  benchmark-hotpath.sh  benchmark-perf.sh  build.sh  clang-format.cmake  cleanBuild.sh  requirements.txt  sample_perf.data  test.html  test.sh
.github/workflows/: clang-format-check.yml  cmake.yml
benchmarking/: CMakeLists.txt  Makefile  README.md  benchmarker  benchmarking.cpp  benchmarking_script.py  cmake_install.cmake  pyvenv.cfg
benchmarking/mocks/: mockCurl.cpp  mockCurl.h
benchmarking/outputs/: benchmark_at[2021-11-29_18:43:59]  benchmark_at[2021-11-29_18:44:24]  benchmark_at[2021-11-29_18:45:14]  benchmark_at[2021-11-29_18:46:16]  benchmark_at[2021-11-29_18:48:59]  benchmark_at[2021-11-29_18:50:10]  benchmark_at[2021-11-29_18:52:19]  output
benchmarking/src/: CMakeLists.txt  benchmarking.cpp
lib/: CMakeLists.txt
src/: BitMEXApi.cpp  BitMEXApi.h  CMakeLists.txt  main  main.cpp
src/ConcurrentUnorderedSet/: CMakeLists.txt  CoarseGrainedUnorderedSet.cpp  ConcurrentUnorderedSet.h  main.cpp
src/arbitrage/: Arbitrage.cpp  Arbitrage.h  CMakeLists.txt
src/bollingerBand/: AlgoTrader.cpp  Band.cpp  Band.h  BitMEXApi.cpp  BitMEXApi.h  BollingerBand.cpp  BollingerBand.h  CMakeLists.txt  Logger.cpp  Logger.h  MarketData.cpp  MarketData.h  Order.cpp  Order.h  SHA256Engine.cpp  SHA256Engine.h  main
src/bollingerBand/Orders/: Order.cpp  Order.h
src/concurrentUnorderedSet/: CMakeLists.txt  CoarseGrainedUnorderedSet.h  CoarseGrainedUnorderedSet.tpp  ConcurrentUnorderedSet.h  main
src/dataManager/: AssetData.h  CMakeLists.txt  DataManager.cpp  DataManager.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  OrderData.cpp  OrderData.h  OrderDataStore.cpp  OrderDataStore.h  OrderTypes.h
src/exchange/: CMakeLists.txt  Exchange.h  MarketData.cpp  MarketData.h  Order.cpp  Order.h  OrderData.cpp  OrderData.h  OrderTypes.h  TradingStrategy.cpp  TradingStrategy.h
src/marketInfoListener/: BinanceListener.cpp  BinanceListener.h  BitMEXListener.cpp  BitMEXListener.h  CMakeLists.txt  CoinbaseListener.cpp  CoinbaseListener.h  FTXListener.cpp  FTXListener.h  KrakenListener.cpp  KrakenListener.h  Listener.cpp  Listener.h
src/orderDataCollectors/: CMakeLists.txt  OrderDataCollector.cpp  OrderDataCollector.h
src/orderDataCollectors/fileReaderListener/: CMakeLists.txt  FileReaderListener.cpp  FileReaderListener.h
src/orderDataCollectors/marketInfoListener/: BinanceListener.cpp  BinanceListener.h  BitMEXListener.cpp  BitMEXListener.h  CMakeLists.txt  CoinbaseListener.cpp  CoinbaseListener.h  FTXListener.cpp  FTXListener.h  KrakenListener.cpp  KrakenListener.h  Listener.cpp  Listener.h  OldMain.txt
src/ordering-system/: Base64.h  CMakeLists.txt  CoinbaseOrderManager.cpp  CoinbaseOrderManager.h  Exchange.h  OrderBuilder.cpp  OrderBuilder.h  OrderExecutor.cpp  OrderExecutor.h  OrderManager.cpp  OrderManager.h  debug  debug.cpp  debug.h
src/ordering-system/binance/: BinanceOrderExecutor.cpp  BinanceOrderExecutor.h  BinanceOrderManager.cpp  BinanceOrderManager.h
src/ordering-system/bitmex/: BitmexOrderExecutor.cpp  BitmexOrderExecutor.h  BitmexOrderManager.cpp  BitmexOrderManager.h
src/ordering-system/coinbase/: CMakeLists.txt  CoinbaseOrderExecutor.cpp  CoinbaseOrderExecutor.h  CoinbaseOrderManager.cpp  CoinbaseOrderManager.h
src/ordering-system/dotenv/: dotenv.h
src/ordering-system/exchangeExecutors/: ExchangeOrderExecutor.cpp  ExchangeOrderExecutor.h  debug.cpp  debug.h
src/ordering-system/exchangeExecutors/binance/: BinanceOrderExecutor.cpp  BinanceOrderExecutor.h
src/ordering-system/exchangeExecutors/bitmex/: BitmexOrderExecutor.cpp  BitmexOrderExecutor.h
src/ordering-system/exchangeExecutors/coinbase/: CoinbaseOrderExecutor.cpp  CoinbaseOrderExecutor.h
src/ordering-system/exchangeExecutors/keys/: bitmex-keys.env
src/ordering-system/exchangeExecutors/utils/: CurlManager.cpp  CurlManager.h  SHA256Engine.h  curlManager.cpp  curlManager.h
src/ordering-system/utils/: Base64.h  SHA256Engine.cpp  SHA256Engine.h
src/tradingStrategies/: CMakeLists.txt  TradingStrategy.cpp  TradingStrategy.h
src/tradingStrategies/arbitrage/: Arbitrage.cpp  Arbitrage.h
src/tradingStrategies/bollingerBand/: Band.cpp  Band.h  BollingerBand.cpp  BollingerBand.h
test/: CMakeLists.txt  README.md  TESTING_GUIDE.txt  main.cpp
test/src/: band_tests.cpp  bollingerBand_tests.cpp  bollinger_strategy_tests.cpp  example_tests.cpp  listener_tests.cpp  main_tests.cpp  marketData_tests.cpp  order_executor_tests.cpp  order_manager_tests.cpp  order_tests.cpp  orderbook_tests.cpp  orderdata_tests.cpp  orderdatastore_tests.cpp  trading_strategy_tests.cpp
